@@ -45,7 +45,10 @@ typedef enum {
     GWY_APP_GRAPH_MODEL_ID,
     GWY_APP_SPECTRA,
     GWY_APP_SPECTRA_KEY,
-    GWY_APP_SPECTRA_ID
+    GWY_APP_SPECTRA_ID,
+    GWY_APP_BRICK,
+    GWY_APP_BRICK_KEY,
+    GWY_APP_BRICK_ID
 } GwyAppWhat;
 /* XXX: silly name */
 
@@ -136,6 +139,7 @@ GQuark gwy_app_get_mask_key_for_id          (gint id);
 GQuark gwy_app_get_show_key_for_id          (gint id);
 GQuark gwy_app_get_graph_key_for_id         (gint id);
 GQuark gwy_app_get_spectra_key_for_id       (gint id);
+GQuark gwy_app_get_brick_key_for_id         (gint id);
 void   gwy_app_set_data_field_title         (GwyContainer *data,
                                              gint id,
                                              const gchar *name);
