@@ -60,7 +60,11 @@ typedef enum {
     KEY_IS_SPS_REF,
     KEY_IS_FILENAME,
     KEY_IS_CALDATA,
-    KEY_IS_GRAPH_LASTID
+    KEY_IS_GRAPH_LASTID,
+    KEY_IS_BRICK,
+    KEY_IS_BRICK_VISIBLE,
+    KEY_IS_BRICK_TITLE,
+    KEY_IS_BRICK_THUMBNAIL,
 } GwyAppKeyType;
 
 G_GNUC_INTERNAL
