@@ -16,6 +16,7 @@
     <xi:include href="xml/gwymodule-tool.xml"/>
     <xi:include href="xml/gwymodule-graph.xml"/>
     <xi:include href="xml/gwymodule-layer.xml"/>
+    <xi:include href="xml/gwymodule-volume.xml"/>
     <xi:include href="xml/gwymodulebrowser.xml"/>
   </chapter>
 
