@@ -1,10 +1,15 @@
 2.32 (0000-00-00)
 Application:
 - GLib 2.14 is now required.
-- Translations updated: Spanish.
+- Translations updated: French, Russian, Spanish.
 
 Libraries:
 - libgwydgets: 3D view can display data overlays without any lighting.
+- libgwydgets: Unwanted window dragging with KDE oxygen theme was hopefully
+  fixed.
+- libgwyapp: Support for volume data and functions were added to the data
+  browser and menu constructors.
+- libgwymodule: Volume data processing module management functions were added.
 
 Modules:
 - Tescan (new): Imports Tescan MIRA SEM images.
